[package]
name = "tg-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
async-openai = "0.16"  # Use async-openai instead of async-openai-wasi
tg-flows = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1", features = ["full"] }  # Use tokio instead of tokio_wasi
flowsnet-platform-sdk = "0.1"
log = "0.4"
store-flows = "0.3.1"
reqwest = { version = "0.11", features = ["json"] }

