[package]
name = "tg-chat"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
async-openai-wasi = "0.16"  # Ensure this line is present
tg-flows = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.95"
tokio_wasi = { version = "1.25.1", features = ["macros", "rt"] }  # Use tokio_wasi for WASM
flowsnet-platform-sdk = "0.1"
log = "0.4"
store-flows = "0.3.1"
reqwest = { version = "0.11", features = ["json"] }
